# WiFi-Mode-Manager

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  wireless.py
ui/dialog/: AboutDialog.ui
ui/model/: wireless_list_model.py
ui/window/: WifiModeManagerWindow.ui  wifi_mode_manager_window.py
wifimodemanager/: __main__.py  main.py  wireless.py
wifimodemanager/ui/dialog/: about_dialog.py
wifimodemanager/ui/model/: wireless_list_model.py
wifimodemanager/ui/window/: wifi_mode_manager_window.py
