[metadata]
name = Wifi Mode Manager
version = 0.0.1
author = Antonio Vázquez-Blanco
author_email =
description =
url = 

[options]
package_dir = 
packages = find:
include_package_data =

[options.packages.find]
where = 

[options.entry_points]
console_scripts =
    wifi-mode-manager = wifimodemanager.main:main
